--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,15 @@
         android:theme="@style/Theme.MSIBFinalProject_4"
         tools:targetApi="31">
         <activity
+            android:name=".QrcodePayment"
+            android:exported="false" />
+        <activity
+            android:name=".VerifyPayment"
+            android:exported="false" />
+        <activity
+            android:name=".OrderPayment"
+            android:exported="false" />
+        <activity
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
@@ -62,7 +71,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".SplashScreenActivity"
             android:exported="true">
